--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "repository": "https://github.com/avaleriani/images-presenter.git",
   "author": "Agustin Valeriani <agustin.valeriani@namecheap.com>",
   "license": "MIT",
+  "scripts": {
+    "deploy": "gh-pages -d ."
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "gh-pages": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
